fix: fix SSL context creation when no SSL is available